@startuml

class Gender {
    MALE
    FEMALE
}

class Address {
    String street
    String number
    String city
}

class Student {
    String lastName
    String firstName
    LocalDate birthDate
    boolean wantsNewsletter
}

class Teacher {
    String lastName
    String firstName
}

class Course {
    String title
}

class CourseMaterial {
    String url
}

Gender -- Student

Address -- Student

Course "0..*" <- "1..*" Student : takes

Teacher "1" -> "0..*" Course : teaches

Course "1" --> "0..1" CourseMaterial : has

@enduml